--- a/index.html
+++ b/index.html
@@ -40,21 +40,24 @@
                         <span>1</span>
                     </div>
                     <h2>Actionable insights</h2>
-                    <div class="card-info">Optimize your products, improve customer satisfaction and stay ahead of the competition with our product data analytics.</div>
+                    <div class="card-info">Optimize your products, improve customer satisfaction and stay ahead of the
+                        competition with our product data analytics.</div>
                 </li>
                 <li class="info-card">
                     <div class="numeric-label">
                         <span>2</span>
                     </div>
                     <h2>Data-driven decisions</h2>
-                    <div class="card-info">Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock insights hidden in your product data.</div>
+                    <div class="card-info">Make data-driven decisions with our product data analytics. Our AI-generated
+                        reports help you unlock insights hidden in your product data.</div>
                 </li>
                 <li class="info-card">
                     <div class="numeric-label">
                         <span>3</span>
                     </div>
                     <h2>Always affordable</h2>
-                    <div class="card-info">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</div>
+                    <div class="card-info">Always affordable pricing that scales with your business. Get top-quality
+                        product data analytics services without hidden costs or unexpected fees.</div>
                 </li>
             </ol>
             <div class="hero-wave">
@@ -68,15 +71,20 @@
         </section>
 
         <section class="creator-section">
-            Be the first to test
-
-            Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
-            beta tester for our app and kickstart your company. Apply for access below and I’ll be
-            in touch to schedule a call.
-
-            Apply for access
+            <img src="img/image-founder.webp" alt="founder">
+            <div class="creator-content">
+                <h2>Be the first to test</h2>
+                <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
+                    beta tester for our app and kickstart your company. Apply for access below and I’ll be
+                    in touch to schedule a call.</p>
+                <button>Apply for access</button>
+            </div>
         </section>
     </main>
+
+    <footer>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, maiores?
+    </footer>
 </body>
 
 </html>
