--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
 
         <div class="hero-content">
-            <h1>Data tailored to your needs.</h1>
+            <h1>Data <span class="highlighted-word">tailored<span></span></span> to your needs.</h1>
             <button>Learn more</button>
         </div>
 
@@ -60,15 +60,16 @@
                         product data analytics services without hidden costs or unexpected fees.</div>
                 </li>
             </ol>
-            <div class="hero-wave">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path
-                        d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                        class="shape-fill"></path>
-                </svg>
-            </div>
         </section>
+
+        <div class="info-section-wave">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
 
         <section class="creator-section">
             <img src="img/image-founder.webp" alt="founder">
@@ -83,7 +84,12 @@
     </main>
 
     <footer>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, maiores?
+        <img src="img/logo-dark.svg" alt="dark-logo">
+        <div class="sm-logos">
+            <img src="img/icon-facebook.svg" alt="">
+            <img src="img/icon-instagram.svg" alt="">
+            <img src="img/icon-twitter.svg" alt="">
+        </div>
     </footer>
 </body>
 
